Fixed link colors and improved layout problem in 'our services' section

--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,7 @@ li.sub-menu-item {
   float: left;
   display: block;
   min-width: 12rem;
+  margin: 1rem;
 }
 
 .col-1-2 {
@@ -184,11 +185,10 @@ li.sub-menu-item {
 
 .col-1-3 {
   width: 30%;
-  margin: 1rem;
 }
 
 .col-1-4 {
-  width: 25%;
+  width: 20%;
 }
 
 .col-1-6 {
@@ -431,6 +431,12 @@ div.main-content-text {
   padding: 8.125rem 7rem;
 }
 
+.title-row-main-content {
+  display: block;
+  margin-left: 1rem;
+  width: 100%;
+}
+
 .main-content h2 {
   color: #4EB8C2;
   font-size: 2.375rem;
@@ -439,13 +445,15 @@ div.main-content-text {
 
 .main-content h3 {
   color: #222;
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: bolder;
 }
 
 .main-content h4 {
-  color: #828282;
-  font-size: 1.25rem;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  font-size: 1.1rem;
   font-weight: bolder;
 }
 
@@ -541,7 +549,9 @@ div.main-content-text {
   color: #828282;
 }
 
-.page-footer h2, h3, h4 {
+.page-footer h2,
+.page-footer h3,
+.page-footer h4 {
   color: #fff;
 }
 
